--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.27.0",
     "react-select": "^5.8.0",
     "react-select-country-list": "^2.2.3",
     "react-slick": "^0.30.2",
@@ -40,6 +41,7 @@
     "redux-thunk": "^3.1.0",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.5.2",
+    "uuid": "^11.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
